fix: Align planner area and focus panel to fit the screen (#144)

--- a/src/renderer/components/plan-editor/PlanEditor.less
+++ b/src/renderer/components/plan-editor/PlanEditor.less
@@ -10,7 +10,7 @@
 
     .planner-area-container {
         position: absolute;
-        top: 0;
+        top: 52px;
         right: 0;
         bottom: 0;
         width: auto !important;
@@ -38,4 +38,9 @@
 .kap-planner-sidebar > .MuiDrawer-paperAnchorRight {
     top: 40px;
     height: calc(100% - 40px);
+}
+
+.focus-side-panel-2  > .MuiDrawer-paperAnchorRight {
+    top: 92px;
+    height: calc(100% - 92px);
 }
